<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center">

    <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/report_detail_dialog_title"
        android:gravity="center"
        android:textSize="25dp"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/report_detail_dialog_content1"
        android:gravity="center"
        android:textSize="18dp"
        android:textColor="@color/app_title"/>

    <TextView
        android:id="@+id/report_count"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="3,000"
        android:gravity="center"
        android:textSize="35dp"
        android:textColor="@color/mainColor"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/report_detail_dialog_content2"
        android:gravity="center"
        android:textSize="18dp"
        android:textColor="@color/app_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/report_detail_dialog_left_button"
            android:background="@color/white"
            android:textColor="@color/mainColor"
            android:textSize="15dp"/>

        <Button
            android:id="@+id/write_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/report_detail_dialog_right_button"
            android:background="@color/mainColor"
            android:textColor="@color/white"
            android:textSize="15dp"/>
    </LinearLayout>

</LinearLayout>