<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center">

    <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/report_dialog_title"
        android:gravity="center"
        android:textSize="25dp"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/report_dialog_address"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="서울특별시 광진구 군자동 209"
        android:gravity="center"
        android:textSize="15dp"
        android:textColor="@color/app_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/report_dialog_sub"
        android:textSize="15dp"
        android:textColor="@color/app_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/report_dialog_left_button"
            android:background="@color/white"
            android:textSize="15dp"
            android:textColor="@color/mainColor"/>

        <Button
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/report_dialog_right_button"
            android:background="@color/mainColor"
            android:textSize="15dp"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>